Explore to excel data with Pandas

--- a/app/ETL_From_data/read_excel_data.ipynb
+++ b/app/ETL_From_data/read_excel_data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Assignment: Read a File into Python"
+    "# Read a File into Python"
    ]
   },
   {
