--- a/app/Exploratory_Data_Analysis/read_excel_data.ipynb
+++ b/app/Exploratory_Data_Analysis/read_excel_data.ipynb
@@ -27,7 +27,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### 1. Read in data from a csv file"
    ]
@@ -52,7 +54,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### 2. Store data in a DataFrame"
    ]
