New notebook for explore data

--- a/app/Exploratory_Data_Analysis/practice_pyetl.ipynb
+++ b/app/Exploratory_Data_Analysis/practice_pyetl.ipynb
@@ -207,27 +207,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "99a27c6a-c55c-4988-bb5e-b13afb346cc6",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "count     82.000000\n",
-       "mean      84.487805\n",
-       "std        8.991414\n",
-       "min       45.000000\n",
-       "25%       81.000000\n",
-       "50%       85.000000\n",
-       "75%       90.000000\n",
-       "max      100.000000\n",
-       "Name: Grade, dtype: float64"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'c:\\Users\\Fezeg\\AppData\\Local\\Programs\\Python\\Python311\\python.exe' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'c:/Users/Fezeg/AppData/Local/Programs/Python/Python311/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+     ]
     }
    ],
    "source": [
