--- a/app/Exploratory_Data_Analysis/solve_problems.ipynb
+++ b/app/Exploratory_Data_Analysis/solve_problems.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1820,13 +1820,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pens = pd.read_excel('../My_Datas/Data/Pen Sales Data.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Customer</th>\n",
+       "      <th>Item</th>\n",
+       "      <th>Pen Cost</th>\n",
+       "      <th>Shipping Cost</th>\n",
+       "      <th>Purchase Date</th>\n",
+       "      <th>Delivery Date</th>\n",
+       "      <th>Review</th>\n",
+       "      <th>Total Spend</th>\n",
+       "      <th>Free Shipping</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5201</td>\n",
+       "      <td>Ballpoint Pens</td>\n",
+       "      <td>5.99</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>2023-05-01</td>\n",
+       "      <td>2023-05-03</td>\n",
+       "      <td>DoodleWithMe|I love the way this pen writes, b...</td>\n",
+       "      <td>8.98</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>5202</td>\n",
+       "      <td>Sharpies</td>\n",
+       "      <td>12.99</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2023-05-01</td>\n",
+       "      <td>2023-05-04</td>\n",
+       "      <td>ScribbleMaster|The classic Sharpie marker has ...</td>\n",
+       "      <td>12.99</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5203</td>\n",
+       "      <td>Ballpoint Pens (Bold)</td>\n",
+       "      <td>6.95</td>\n",
+       "      <td>4.99</td>\n",
+       "      <td>2023-05-01</td>\n",
+       "      <td>2023-05-02</td>\n",
+       "      <td>PenPalForever|The retractable ballpoint pen ha...</td>\n",
+       "      <td>11.94</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>5204</td>\n",
+       "      <td>Gel Pens</td>\n",
+       "      <td>5.99</td>\n",
+       "      <td>2.99</td>\n",
+       "      <td>2023-05-01</td>\n",
+       "      <td>2023-05-04</td>\n",
+       "      <td>TheWriteWay|This gel pen has a comfortable gri...</td>\n",
+       "      <td>8.98</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5205</td>\n",
+       "      <td>Rollerball Pens</td>\n",
+       "      <td>12.99</td>\n",
+       "      <td>1.99</td>\n",
+       "      <td>2023-05-01</td>\n",
+       "      <td>2023-05-03</td>\n",
+       "      <td>PenAndPaperPerson|The rollerball pen has a smo...</td>\n",
+       "      <td>14.98</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Customer                   Item  Pen Cost  Shipping Cost Purchase Date  \\\n",
+       "0      5201         Ballpoint Pens      5.99           2.99    2023-05-01   \n",
+       "1      5202               Sharpies     12.99           0.00    2023-05-01   \n",
+       "2      5203  Ballpoint Pens (Bold)      6.95           4.99    2023-05-01   \n",
+       "3      5204               Gel Pens      5.99           2.99    2023-05-01   \n",
+       "4      5205        Rollerball Pens     12.99           1.99    2023-05-01   \n",
+       "\n",
+       "  Delivery Date                                             Review  \\\n",
+       "0    2023-05-03  DoodleWithMe|I love the way this pen writes, b...   \n",
+       "1    2023-05-04  ScribbleMaster|The classic Sharpie marker has ...   \n",
+       "2    2023-05-02  PenPalForever|The retractable ballpoint pen ha...   \n",
+       "3    2023-05-04  TheWriteWay|This gel pen has a comfortable gri...   \n",
+       "4    2023-05-03  PenAndPaperPerson|The rollerball pen has a smo...   \n",
+       "\n",
+       "   Total Spend Free Shipping  \n",
+       "0         8.98            No  \n",
+       "1        12.99           Yes  \n",
+       "2        11.94            No  \n",
+       "3         8.98            No  \n",
+       "4        14.98            No  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pens.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a “Total Spend” column that includes both the pen cost and shipping cost for each sale\n",
-    "# Create a “Free Shipping” column that says yes if the sale included free shipping, and no otherwise"
+    "pens['Total Spend'] = pens['Pen Cost'] + pens['Shipping Cost']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a “Free Shipping” column that says yes if the sale included free shipping, and no otherwise\n",
+    "pens[\"Free Shipping\"] = np.where(pens['Shipping Cost'] == 0, 'Yes', 'No')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
