Solve new problemas with data analysis

--- a/app/Exploratory_Data_Analysis/Practice.ipynb
+++ b/app/Exploratory_Data_Analysis/Practice.ipynb
@@ -378,8 +378,407 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "23b2b33d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Product_ID</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Item</th>\n",
+       "      <th>Price_Dollars</th>\n",
+       "      <th>Inventory</th>\n",
+       "      <th>Last_Updated</th>\n",
+       "      <th>Next_Scheduled_Shipment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>P100010</td>\n",
+       "      <td>Produce: Fruit</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>1.50</td>\n",
+       "      <td>349</td>\n",
+       "      <td>2023-06-12 15:35:00</td>\n",
+       "      <td>2023-06-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>P100011</td>\n",
+       "      <td>Produce: Fruit</td>\n",
+       "      <td>Banana</td>\n",
+       "      <td>0.40</td>\n",
+       "      <td>500</td>\n",
+       "      <td>2023-06-12 18:30:00</td>\n",
+       "      <td>2023-06-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>P100012</td>\n",
+       "      <td>Produce: Fruit</td>\n",
+       "      <td>Grapes</td>\n",
+       "      <td>4.00</td>\n",
+       "      <td>200</td>\n",
+       "      <td>2023-06-12 17:22:00</td>\n",
+       "      <td>2023-06-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>P100013</td>\n",
+       "      <td>Produce: Fruit</td>\n",
+       "      <td>Grapefruit</td>\n",
+       "      <td>0.99</td>\n",
+       "      <td>50</td>\n",
+       "      <td>2023-06-12 16:29:00</td>\n",
+       "      <td>2023-06-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>P100014</td>\n",
+       "      <td>Produce: Fruit</td>\n",
+       "      <td>Organic Strawberries</td>\n",
+       "      <td>3.99</td>\n",
+       "      <td>148</td>\n",
+       "      <td>2023-06-12 18:10:00</td>\n",
+       "      <td>2023-06-15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Product_ID        Category                  Item  Price_Dollars  Inventory  \\\n",
+       "0    P100010  Produce: Fruit                 Apple           1.50        349   \n",
+       "1    P100011  Produce: Fruit                Banana           0.40        500   \n",
+       "2    P100012  Produce: Fruit                Grapes           4.00        200   \n",
+       "3    P100013  Produce: Fruit            Grapefruit           0.99         50   \n",
+       "4    P100014  Produce: Fruit  Organic Strawberries           3.99        148   \n",
+       "\n",
+       "         Last_Updated Next_Scheduled_Shipment  \n",
+       "0 2023-06-12 15:35:00              2023-06-15  \n",
+       "1 2023-06-12 18:30:00              2023-06-15  \n",
+       "2 2023-06-12 17:22:00              2023-06-15  \n",
+       "3 2023-06-12 16:29:00              2023-06-15  \n",
+       "4 2023-06-12 18:10:00              2023-06-15  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "87faa6c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Category\n",
+       "Frozen: Frozen Fruit      340\n",
+       "Frozen: Frozen Snacks     161\n",
+       "Pantry: Snacks            737\n",
+       "Produce: Dairy           1098\n",
+       "Produce: Fruit           1346\n",
+       "Produce: Meat             617\n",
+       "Produce: Vegetable        558\n",
+       "Name: Inventory, dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"Category\")[\"Inventory\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "bafd6841",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Category\n",
+       "Frozen: Frozen Fruit     2\n",
+       "Frozen: Frozen Snacks    2\n",
+       "Pantry: Snacks           4\n",
+       "Produce: Dairy           4\n",
+       "Produce: Fruit           6\n",
+       "Produce: Meat            3\n",
+       "Produce: Vegetable       4\n",
+       "Name: Inventory, dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.groupby(\"Category\")[\"Inventory\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "dd66d17c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Item</th>\n",
+       "      <th>Price_Dollars</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Frozen: Frozen Fruit</td>\n",
+       "      <td>Frozen Blueberries</td>\n",
+       "      <td>10.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Produce: Meat</td>\n",
+       "      <td>Chicken (Organic)</td>\n",
+       "      <td>10.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Produce: Meat</td>\n",
+       "      <td>Beef</td>\n",
+       "      <td>8.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Produce: Meat</td>\n",
+       "      <td>Turkey</td>\n",
+       "      <td>7.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Frozen: Frozen Fruit</td>\n",
+       "      <td>Frozen Pineapple</td>\n",
+       "      <td>7.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Frozen: Frozen Snacks</td>\n",
+       "      <td>Chicken Nuggets</td>\n",
+       "      <td>6.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Produce: Fruit</td>\n",
+       "      <td>Watermelon</td>\n",
+       "      <td>5.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Pantry: Snacks</td>\n",
+       "      <td>Cookies (Oatmeal)</td>\n",
+       "      <td>5.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Frozen: Frozen Snacks</td>\n",
+       "      <td>Spinach Dip</td>\n",
+       "      <td>4.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Produce: Dairy</td>\n",
+       "      <td>Milk (Soy)</td>\n",
+       "      <td>4.49</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Produce: Fruit</td>\n",
+       "      <td>Grapes</td>\n",
+       "      <td>4.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Produce: Fruit</td>\n",
+       "      <td>Organic Strawberries</td>\n",
+       "      <td>3.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Produce: Dairy</td>\n",
+       "      <td>Butter</td>\n",
+       "      <td>3.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Produce: Dairy</td>\n",
+       "      <td>Eggs</td>\n",
+       "      <td>3.29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Pantry: Snacks</td>\n",
+       "      <td>Raisins</td>\n",
+       "      <td>2.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Pantry: Snacks</td>\n",
+       "      <td>Chips</td>\n",
+       "      <td>2.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Produce: Vegetable</td>\n",
+       "      <td>Carrots</td>\n",
+       "      <td>2.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Produce: Vegetable</td>\n",
+       "      <td>Celery</td>\n",
+       "      <td>1.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Produce: Vegetable</td>\n",
+       "      <td>Cabbage</td>\n",
+       "      <td>1.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Pantry: Snacks</td>\n",
+       "      <td>Apple Sauce - organic</td>\n",
+       "      <td>1.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Produce: Fruit</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>1.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Produce: Dairy</td>\n",
+       "      <td>Yogurt</td>\n",
+       "      <td>1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Produce: Fruit</td>\n",
+       "      <td>Grapefruit</td>\n",
+       "      <td>0.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Produce: Vegetable</td>\n",
+       "      <td>Cucumber</td>\n",
+       "      <td>0.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Produce: Fruit</td>\n",
+       "      <td>Banana</td>\n",
+       "      <td>0.40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Category                   Item  Price_Dollars\n",
+       "23   Frozen: Frozen Fruit     Frozen Blueberries          10.99\n",
+       "11          Produce: Meat      Chicken (Organic)          10.49\n",
+       "10          Produce: Meat                   Beef           8.99\n",
+       "12          Produce: Meat                 Turkey           7.99\n",
+       "24   Frozen: Frozen Fruit       Frozen Pineapple           7.96\n",
+       "21  Frozen: Frozen Snacks        Chicken Nuggets           6.99\n",
+       "5          Produce: Fruit             Watermelon           5.99\n",
+       "19         Pantry: Snacks      Cookies (Oatmeal)           5.39\n",
+       "22  Frozen: Frozen Snacks            Spinach Dip           4.96\n",
+       "15         Produce: Dairy             Milk (Soy)           4.49\n",
+       "2          Produce: Fruit                 Grapes           4.00\n",
+       "4          Produce: Fruit   Organic Strawberries           3.99\n",
+       "13         Produce: Dairy                 Butter           3.50\n",
+       "14         Produce: Dairy                   Eggs           3.29\n",
+       "20         Pantry: Snacks                Raisins           2.99\n",
+       "18         Pantry: Snacks                  Chips           2.50\n",
+       "7      Produce: Vegetable                Carrots           2.00\n",
+       "8      Produce: Vegetable                 Celery           1.99\n",
+       "6      Produce: Vegetable                Cabbage           1.78\n",
+       "17         Pantry: Snacks  Apple Sauce - organic           1.50\n",
+       "0          Produce: Fruit                  Apple           1.50\n",
+       "16         Produce: Dairy                 Yogurt           1.00\n",
+       "3          Produce: Fruit             Grapefruit           0.99\n",
+       "9      Produce: Vegetable               Cucumber           0.99\n",
+       "1          Produce: Fruit                 Banana           0.40"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[[\"Category\", \"Item\", \"Price_Dollars\"]].sort_values(\"Price_Dollars\", ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4334744c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -387,7 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87faa6c8",
+   "id": "821a88ab",
    "metadata": {},
    "outputs": [],
    "source": []
