--- a/app/Movie_Ratings/Assigment_solution.ipynb
+++ b/app/Movie_Ratings/Assigment_solution.ipynb
@@ -1,6 +1,32 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solve Problems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "abb8e1c9",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "232c0089",
+   "metadata": {},
+   "source": []
+  }
+ ],
+ "metadata": {
+  "language_info": {
+   "name": "python"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
