--- a/app/Cleaning_Data/practice_pyetl.ipynb
+++ b/app/Cleaning_Data/practice_pyetl.ipynb
@@ -16,7 +16,6 @@
    "cell_type": "markdown",
    "id": "5ab927f5-37d7-41db-a273-54f7dd4d98a1",
    "metadata": {
-    "heading_collapsed": true,
     "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
@@ -25,11 +24,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "f8e36720-7ecb-4da1-a8b9-e7dbe256c104",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_excel('../My_Datas/Data/Student Grades.xlsx')"
@@ -37,23 +34,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "id": "daefffa6-7bad-4c52-abc0-97e72f264ff3",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'Grade'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_16884\\2204210962.py\u001b[0m in \u001b[0;36m?\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mGrade\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;36m100\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Documents\\GitHub\\DataScience\\venv\\Lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m?\u001b[1;34m(self, name)\u001b[0m\n\u001b[0;32m   6292\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6293\u001b[0m             \u001b[1;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   6294\u001b[0m         ):\n\u001b[0;32m   6295\u001b[0m             \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 6296\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'Grade'"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Student</th>\n",
+       "      <th>Class</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Grade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <td>Ella</td>\n",
+       "      <td>Exploratory Data Analysis</td>\n",
+       "      <td>Sophomore</td>\n",
+       "      <td>200.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Student                      Class       Year  Grade\n",
+       "60    Ella  Exploratory Data Analysis  Sophomore  200.0"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -64,9 +95,7 @@
    "cell_type": "code",
    "execution_count": 21,
    "id": "eecb1f93-024e-4e3b-964a-755e7cebc4aa",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -94,9 +123,7 @@
    "cell_type": "code",
    "execution_count": 22,
    "id": "c1118b2c-a29f-46e3-b647-7c56e459197c",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -129,9 +156,7 @@
    "cell_type": "code",
    "execution_count": 23,
    "id": "c416d40d-b80e-4ab7-bdc1-9fee49a5111b",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -164,9 +189,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "dc9dafb9-32ab-4f56-b29e-0380fa9fd045",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -199,9 +222,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "99a27c6a-c55c-4988-bb5e-b13afb346cc6",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -230,9 +251,7 @@
    "cell_type": "code",
    "execution_count": 53,
    "id": "1d5376bd-3acc-4134-a5cc-b1f94620191c",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "df_grades = pd.read_excel('../My_Datas/Data/Student Grades.xlsx')"
@@ -242,9 +261,7 @@
    "cell_type": "code",
    "execution_count": 54,
    "id": "588f74a3-adb8-4559-973d-3d54cdd88fdf",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -335,9 +352,7 @@
    "cell_type": "code",
    "execution_count": 55,
    "id": "c9f143e9-ac42-4400-8d01-408db47c9f82",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -365,9 +380,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "ced23c2b-56ab-4e66-ac1b-9303b71e4106",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "run_times = df = pd.read_excel('../My_Datas/Data/Run Times.xlsx')"
@@ -377,9 +390,7 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "372983e7-56e5-4548-b9f3-8eb05fbbf6e9",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2246,7 +2257,9 @@
   {
    "cell_type": "markdown",
    "id": "b4d565f0",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
     "## Extracting text\n"
    ]
@@ -2255,7 +2268,9 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "9b9225a3-0f18-455a-a8c5-c3de49b85325",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "df = pd.read_excel('../My_Datas/Data/Groceries.xlsx')"
@@ -2265,7 +2280,9 @@
    "cell_type": "code",
    "execution_count": 34,
    "id": "ffbf32ff",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -2393,7 +2410,9 @@
    "cell_type": "code",
    "execution_count": 16,
    "id": "9d80e893",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "df['Product_Number'] = df.Product_ID.str[1:]"
@@ -2403,7 +2422,9 @@
    "cell_type": "code",
    "execution_count": 35,
    "id": "41281417",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "df['Product_Number'] = df['Product_Number'].astype('int')"
@@ -2413,7 +2434,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "6ff22db6",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "df[['Category', 'Subcategory']] = pd.DataFrame(df.Category.str.split(':').to_list())"
@@ -2423,7 +2446,9 @@
    "cell_type": "code",
    "execution_count": 43,
    "id": "3edf4ad0",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -2564,7 +2589,9 @@
    "cell_type": "code",
    "execution_count": 42,
    "id": "b246bec8",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "df['Organic'] = df.Item.str.lower().str.contains('organic|organic', regex=True)"
@@ -2574,7 +2601,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "521f9697",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   },
@@ -2582,7 +2611,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "99af2a45",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": []
   }
